[project]
name = "qn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.6.1",
    "huggingface-hub>=0.30.2",
    "ollama>=0.4.8",
    "openai>=1.77.0",
    "py2neo>=2021.2.4",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.5",
    "tika>=3.1.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
